# laptop_camera_and_ros2

./: LICENSE  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros2_opencv/share/ros2_opencv/: package.sh  package.xml
log/: latest_build
src/ros2_opencv/: package.xml  setup.py
src/ros2_opencv/launch/: camera_pub_sub.py
