<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_opencv</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="077bme014.biswash@pcampus.edu.np">biswash</maintainer>
  <license>TODO: License declaration</license>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>
  <build_depend>launch</build_depend>  <!-- Add this line -->
  <build_depend>launch_ros</build_depend>  <!-- Add this line -->


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>launch</exec_depend>  <!-- Add this line -->
  <exec_depend>launch_ros</exec_depend>  <!-- Add this line -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
